# Lighting-OpenGL

./: CMakeLists.txt  README.md
Lighting/include/: camera.h  obj_loader.h  shader.h
Lighting/src/: camera.cpp  main.cpp  shader.cpp
